# ldbc-data-gen

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/: duckdb-version
.github/workflows/: MainDistributionPipeline.yml  PostgresBIValidation.yml  SF1Parity.yml
docs/: UPDATING.md  duckdb-q18-limit-internal-error.md
scripts/: generate_embedded_resources.py
src/: ldbc_bi_queries.cpp  ldbc_data_gen_extension.cpp  ldbc_datagen_config.cpp  ldbc_java_random.cpp  ldbc_person_dictionaries.cpp  ldbc_person_generator.cpp  ldbc_resources.cpp  ldbc_unicode.cpp
src/include/: ldbc_bi_queries.hpp  ldbc_bi_queries_generated.hpp.in  ldbc_data_gen_extension.hpp  ldbc_datagen_config.hpp  ldbc_gen.hpp  ldbc_java_random.hpp  ldbc_person_dictionaries.hpp  ldbc_person_generator.hpp  ldbc_resources.hpp  ldbc_unicode.hpp
src/queries/: NOTICE  bi-18.sql
test/: README.md
test/fixtures/: ldbc_snb_bi_sf1_checksums.csv  ldbc_snb_bi_sf1_results.json  ldbc_snb_bi_static_schema.json
test/sql/: ldbc_bi_results.test  ldbc_data_gen.test
tools/: bi_query_results.py  bi_snapshot_parity.py  bi_update_parity.py  dynamic_parity.py  forum_parity.py  generate_spark_reference.py  generated_checksums.py  postgres_bi_loader.py  static_parity.py  validate_ldbc_fixture.py
tools/postgres/: prepare_ldbc_bi.sql
